Suppress download progress output during build. (#568)